Fix the ctas so that they are aligned when on screens over 1100 pixels

--- a/bin/scss/abstracts/_utilities.scss
+++ b/bin/scss/abstracts/_utilities.scss
@@ -33,6 +33,25 @@
     /*  --- MEDIA OBJECT */
     .media {margin:10px;}
     .media, .bd {overflow:hidden; _overflow:visible; zoom:1;}
-    .media .img {float:left; margin-right: 10px;}
+    .media .img {float:left; margin-right: 1px;}
     .media .img img{display:block;}
     .media .imgExt{float:right; margin-left: 10px; margin-right: 10%;}
+    .cta-m .media .img img {margin-left: 50px;}
+
+    @media only screen and (min-width: 1000px) {
+      .media .bd {
+        float: none;
+      }
+      .media .img {
+        float:none; 
+        margin-right: 10px;
+      }
+
+      .media .img img {
+        margin: 0 auto;
+      }
+
+      .media .imgExt {
+        float: none;
+      }
+    }
