--- a/bin/scss/layout/_footer.scss
+++ b/bin/scss/layout/_footer.scss
@@ -3,6 +3,7 @@
   .footer {
     margin-top: 10%;
     margin-bottom: 5%;
+    clear: both;
   }
   
   .nav-list li{
