--- a/bin/scss/pages/_directions.scss
+++ b/bin/scss/pages/_directions.scss
@@ -11,7 +11,7 @@
 
 
   /* @ 600 - 900px */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 900px) {
     
       
 }
