--- a/bin/scss/pages/_home.scss
+++ b/bin/scss/pages/_home.scss
@@ -32,15 +32,41 @@
    }
   
    .cta-a {
-     margin-bottom: 10%;
+     margin-bottom: 5%;
    }
 
 
 
 
 
-   /* @ 600 - 900px */
-@media only screen and (min-width: 600px) {
+   /* @ 900px - */
+@media only screen and (min-width: 1100px) {
+  .container {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+.cta-l {
+      width: 30%;
+      position: relative;
+      float: left;
+    }
+
+.cta-m {
+  width: 30%;
+  position: relative;
+  top: -10px;
+  float: left;
+}
+
+.cta-img {
+  margin-top: 2em;
+  margin-left: 4em;
+}
     
-      
+.cta-a {
+  width: 30%;
+  position: relative;
+  float: left;
+}
 }
