--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@
 
 .media .img {
   float: left;
-  margin-right: 10px; }
+  margin-right: 1px; }
 
 .media .img img {
   display: block; }
@@ -43,6 +43,20 @@
   float: right;
   margin-left: 10px;
   margin-right: 10%; }
+
+.cta-m .media .img img {
+  margin-left: 50px; }
+
+@media only screen and (min-width: 1000px) {
+  .media .bd {
+    float: none; }
+  .media .img {
+    float: none;
+    margin-right: 10px; }
+  .media .img img {
+    margin: 0 auto; }
+  .media .imgExt {
+    float: none; } }
 
 /* COLORS */
 /* FONT */
@@ -132,7 +146,8 @@ a {
 /* FOOTER */
 .footer {
   margin-top: 10%;
-  margin-bottom: 5%; }
+  margin-bottom: 5%;
+  clear: both; }
 
 .nav-list li {
   display: inline-block;
@@ -265,13 +280,38 @@ a {
   .page-header {
     background-image: url("http://www.placebeard.it/g/900x300");
     background-repeat: no-repeat;
-    height: 200px;
+    height: 300px;
     width: 900; }
   .direction-page-header {
     background-image: url("http://www.placebeard.it/g/900x300");
     background-repeat: no-repeat;
     position: relative;
     top: -50px;
+    height: 300px;
+    width: 100%; } }
+
+@media only screen and (min-width: 700px) {
+  i.fa.fa-bars {
+    display: none; }
+  .nav ul {
+    display: inline-block; } }
+
+@media only screen and (min-width: 900px) {
+  .info {
+    background-image: url("http://www.placebeard.it/g/1200x300");
+    background-repeat: no-repeat;
+    height: 300;
+    width: 100%; }
+  /* For all pages but the index or directions page*/
+  .page-header {
+    background-image: url("http://www.placebeard.it/g/1200x300");
+    background-repeat: no-repeat;
+    height: 300px;
+    width: 100%; }
+  .direction-page-header {
+    background-image: url("http://www.placebeard.it/g/1200x300");
+    background-repeat: no-repeat;
+    position: relative;
     height: 300px;
     width: 100%; } }
 
@@ -303,9 +343,30 @@ a {
   margin-bottom: 5%; }
 
 .cta-a {
-  margin-bottom: 10%; }
+  margin-bottom: 5%; }
 
-/* @ 600 - 900px */
+/* @ 900px - */
+@media only screen and (min-width: 1100px) {
+  .container {
+    width: 100%;
+    margin: 0 auto; }
+  .cta-l {
+    width: 30%;
+    position: relative;
+    float: left; }
+  .cta-m {
+    width: 30%;
+    position: relative;
+    top: -10px;
+    float: left; }
+  .cta-img {
+    margin-top: 2em;
+    margin-left: 4em; }
+  .cta-a {
+    width: 30%;
+    position: relative;
+    float: left; } }
+
 /* DIRECTIONS page */
 .direction {
   position: relative;
